fix(Icon):  remove white space under image when using image URL (#10220)
* fix(Icon): use image URL as name prop, remove white space under image

* Update index.less

--- a/packages/vant/src/icon/index.less
+++ b/packages/vant/src/icon/index.less
@@ -2,6 +2,7 @@
 
 .van-icon {
   &__image {
+    display: block;
     width: 1em;
     height: 1em;
     object-fit: contain;
